RESOLVED FIXED104886
plugin snapshotting accepts bad snapshot after 5 seconds
https://bugs.webkit.org/show_bug.cgi?id=104886
Summary plugin snapshotting accepts bad snapshot after 5 seconds
Jon Lee
Reported 2012-12-13 00:24:09 PST
On slow networks this looks bad. Increase to 60. <rdar://problem/12838753>
Attachments
Patch (1.42 KB, patch)
2012-12-13 00:27 PST, Jon Lee
mjs: review+
Jon Lee
Comment 1 2012-12-13 00:27:30 PST
Maciej Stachowiak
Comment 2 2012-12-13 01:00:22 PST
Comment on attachment 179220 [details] Patch 60 seconds seems like a lot, but ok.
Jon Lee
Comment 3 2012-12-13 01:30:40 PST
Note You need to log in before you can comment on or make changes to this bug.