plugin snapshotting accepts bad snapshot after 5 seconds https://bugs.webkit.org/show_bug.cgi?id=104886 <rdar://problem/12838753>

Reviewed by Maciej Stachowiak.

* WebProcess/Plugins/PluginView.cpp: Increase to 60 tries, equating to a little over 60 seconds total.

Canonical link: https://commits.webkit.org/123120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137575 268f45cc-cd09-0410-ab3c-d52691b4dbfc